--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,10 +18,20 @@
         android:id="@+id/textViewPhoto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="70dp"
         android:gravity="bottom|center_horizontal"
         android:text="@string/hello_blank_fragment"
         android:textColor="@android:color/white"
         android:textSize="24sp" />
+
+    <ImageView
+        android:id="@+id/savePhotoBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="70dp"
+        android:clickable="true"
+        android:src="@drawable/downloadbutton" />
 
 </FrameLayout>
